# act3

./: CMakeLists.txt  Factorial.h  Operaciones.h  main.cpp
.github/workflows/: build.yml
tests/: test_factorial.cpp  test_operaciones.cpp
